--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Summary</h2>
     <p>I am a hardworking and dedicated individual with experience in customer service and administration.</p>
     <hr>
-    <h2>Edutucation</h2>
+    <h2>Education</h2>
     <ul>
         <li>Advanced Diploma in Exercise Science - Weltec (2014-2016)</li>
         <li>Certificate in Information Technology - Open Polytecnic (2022-2023)</li>
